--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -36,6 +36,7 @@
             "error",
             "always"
         ],
-        "react/react-in-jsx-scope": "off"
+        "react/react-in-jsx-scope": "off",
+        "no-empty": ["error", { "allowEmptyCatch" : true}]
     }
 }
